[project]
name = "fge"
authors = [
    { name = "Eric Yu", email = "erict12321@gmail.com" },
    { name = "Oswin So", email = "oswinso@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "attrs==25.3.0",
    "cattrs==25.2.0",
    "chex==0.1.91",
    "colorcet==3.1.0",
    "colour==0.1.5",
    "control==0.10.2",
    "cyclopts==3.16.1",
    "decorator==4.4.2",
    "einops==0.8.1",
    "equinox==0.13.2",
    "et @ git+https://github.com/ericyangyu/et@74a00ef31278af74147c9d70f9bad19b89632203",
    "flax==0.12.0",
    "flowjax==17.2.1",
    "gymnasium==1.1.1",
    "imageio==2.37.2",
    "ipdb==0.13.13",
    "jax==0.8.0",
    "jax-array-info @ git+https://github.com/Findus23/jax-array-info@6eb1727e5e67e7ddd90f2c8b9ff9f59a641fd050",
    "jax-jumpy @ git+https://github.com/oswinso/Jumpy@e18b15f188694b3b4dccfd86b5a451f2386b7577",
    "jax-tqdm==0.4.0",
    "jax2d==1.0.1",
    "jax_dataclasses==1.6.2",
    "jaxgl==1.0.1",
    "jaxtyping==0.3.2",
    "kinetix-env @ git+https://github.com/FLAIROx/Kinetix@9a2ab54d5da4fcc8b2e2493f789eab9963e485fe",
    "loguru==0.7.3",
    "matplotlib==3.10.3",
    "mujoco>=3.3.7",
    "mujoco-mjx==3.3.7",
    "numpy==2.2.6",
    "og @ git+https://github.com/oswinso/og@31b8e51010cfc927e0f9088e22f8fb7a6301a0f3",
    "opencv-python==4.12.0.88",
    "optax==0.2.6",
    "paramax==0.0.3",
    "pillow==11.2.1",
    "Pint==0.25.2",
    "playsound3==3.2.3",
    "psutil==7.1.3",
    "pyinstrument==5.1.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shapely==2.1.2",
    "tensorboard==2.20.0",
    "tfp-nightly[jax]==0.26.0.dev20251113",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "wandb==0.21.0",
]
dynamic = ["version"]

[project.optional-dependencies]
f16 = [
    "diffrax==0.7.0",
    "flightcondition==24.6.22",
    "jax-f16 @ git+https://github.com/MIT-REALM/jax-f16@68137e38230c59e7cabb2d2d73262307499e62cd",
    "protof16 @ git+https://github.com/oswinso/protof16@0c0504401c072c38921f8d3dc36702a5e9ce5369",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = [""]
